# PrivateLibrary

./: CMakeLists.txt  README.md  create-header.py  prilib.h
include/: bijectionmap.h  bytepool.h  charptr.h  convert.h  csvloader.h  dllloader.h  dyarray.h  explicittype.h  ffifunc.h  file.h  hashstringpool.h  indextable.h  lightlist.h  macro.h  matrix.h  memory.h  number.h  prints.h  random.h  range.h  rational-convert.h  rational.h  record.h  storeptr.h  stringview.h  timer.h  uniqueptrvector.h
source/: convert.cpp  dllloader.cpp  file.cpp  number.cpp
